--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@ search_exclude: true
 image: images/logo.png
 ---
 
+Bem vind@ ao portal ainda não oficial da T30 Unifor. No futuro, pretendemos usar esse site para disponibilizar resumos. anotações e materias que foram compartilhados pela turma. No momento, temos alguns tutoriais sobre como usar o site.
+
+1. [Unifor Online](http://uol.unifor.br)
+1. [Portal EAD](http://ead.unifor.br)
+1. [Email para problemas com o acesso](mailto:infra@unifor.br]
+
 This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
 
 ![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
