deploy: 39e703ccfd37b949354e0db16b9f96b1233ab9d9

--- a/index.html
+++ b/index.html
@@ -67,7 +67,15 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
+        <div class="home"><p>Bem vind@ ao portal ainda não oficial da T30 Unifor. No futuro, pretendemos usar esse site para disponibilizar resumos. anotações e materias que foram compartilhados pela turma. No momento, temos alguns tutoriais sobre como usar o site.</p>
+
+<ol>
+  <li><a href="http://uol.unifor.br">Unifor Online</a></li>
+  <li><a href="http://ead.unifor.br">Portal EAD</a></li>
+  <li>[Email para problemas com o acesso](mailto:infra@unifor.br]</li>
+</ol>
+
+<p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
 
 <p><img src="/t30/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
 
