--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@ Bem vind@ ao portal ainda não oficial da T30 Unifor. No futuro, pretendemos usa
 
 1. [Unifor Online](http://uol.unifor.br)
 1. [Portal EAD](http://ead.unifor.br)
-1. [Email para problemas com o acesso](mailto:infra@unifor.br]
+1. [Email para problemas com o acesso](mailto:infra@unifor.br)
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
-
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
+![](https://giphy.com/embed/daxA5okS3H9gkpKpjR)
 
 [fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
 
