deploy: b4580cc509804e49b8e8d1e2ad617c0e20115a96

--- a/index.html
+++ b/index.html
@@ -72,12 +72,10 @@ window.onload = wrap_img;
 <ol>
   <li><a href="http://uol.unifor.br">Unifor Online</a></li>
   <li><a href="http://ead.unifor.br">Portal EAD</a></li>
-  <li>[Email para problemas com o acesso](mailto:infra@unifor.br]</li>
+  <li><a href="mailto:infra@unifor.br">Email para problemas com o acesso</a></li>
 </ol>
 
-<p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
-
-<p><img src="/t30/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
+<p><img src="https://giphy.com/embed/daxA5okS3H9gkpKpjR" alt="" /></p>
 
 <p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
 
