--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ Bem vind@ ao portal ainda não oficial da T30 Unifor. No futuro, pretendemos usa
 1. [Portal EAD](http://ead.unifor.br)
 1. [Email para problemas com o acesso](mailto:infra@unifor.br)
 
-![](https://giphy.com/embed/daxA5okS3H9gkpKpjR)
+## Se alguém tem interesse em aprender (ou já sabe) escrever com Markdown, por favor [me envia uma mensagem](https://wa.me/5585992313061?text=Eu%20posso%20ajudar%20no%20site)!
+![](https://media4.giphy.com/media/daxA5okS3H9gkpKpjR/giphy.gif)
 
 [fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
 
