--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@ window.onload = wrap_img;
   <li><a href="mailto:infra@unifor.br">Email para problemas com o acesso</a></li>
 </ol>
 
-<p><img src="https://giphy.com/embed/daxA5okS3H9gkpKpjR" alt="" /></p>
+<h2 id="se-alguém-tem-interesse-em-aprender-ou-já-sabe-escrever-com-markdown-por-favor-me-envia-uma-mensagem">Se alguém tem interesse em aprender (ou já sabe) escrever com Markdown, por favor <a href="https://wa.me/5585992313061?text=Eu%20posso%20ajudar%20no%20site">me envia uma mensagem</a>!</h2>
+<p><img src="https://media4.giphy.com/media/daxA5okS3H9gkpKpjR/giphy.gif" alt="" /></p>
 
 <p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
 
