--- a/404.html
+++ b/404.html
@@ -10,13 +10,13 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="O site ainda não oficial da T30 de Medicina da Unifor." />
 <meta property="og:description" content="O site ainda não oficial da T30 de Medicina da Unifor." />
-<link rel="canonical" href="https://t30unifor.github.io/t30/404.html" />
-<meta property="og:url" content="https://t30unifor.github.io/t30/404.html" />
+<link rel="canonical" href="https://t30unifor.tk/404.html" />
+<meta property="og:url" content="https://t30unifor.tk/404.html" />
 <meta property="og:site_name" content="Turma 30 Unifor" />
 <script type="application/ld+json">
-{"description":"O site ainda não oficial da T30 de Medicina da Unifor.","url":"https://t30unifor.github.io/t30/404.html","@type":"WebPage","headline":"Turma 30 Unifor","@context":"https://schema.org"}</script>
+{"description":"O site ainda não oficial da T30 de Medicina da Unifor.","url":"https://t30unifor.tk/404.html","@type":"WebPage","headline":"Turma 30 Unifor","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/t30/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://t30unifor.github.io/t30/feed.xml" title="Turma 30 Unifor" /><link rel="shortcut icon" type="image/x-icon" href="/t30/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
+<link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://t30unifor.tk/feed.xml" title="Turma 30 Unifor" /><link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
 
 <script>
@@ -51,7 +51,7 @@ window.onload = wrap_img;
 </head>
 <body><header class="site-header">
 
-  <div class="wrapper"><a class="site-title" rel="author" href="/t30/">Turma 30 Unifor</a><nav class="site-nav">
+  <div class="wrapper"><a class="site-title" rel="author" href="/">Turma 30 Unifor</a><nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
           <span class="menu-icon">
@@ -61,7 +61,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/t30/about/">About Me</a><a class="page-link" href="/t30/search/">Search</a><a class="page-link" href="/t30/categories/">Tags</a></div>
+        <div class="trigger"><a class="page-link" href="/about/">About Me</a><a class="page-link" href="/search/">Search</a><a class="page-link" href="/categories/">Tags</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
@@ -88,16 +88,16 @@ window.onload = wrap_img;
 
       </div>
     </main><footer class="site-footer h-card">
-  <data class="u-url" href="/t30/"></data>
+  <data class="u-url" href="/"></data>
 
   <div class="wrapper">
 
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="/t30/feed.xml">
+          <a href="/feed.xml">
             <svg class="svg-icon orange">
-              <use xlink:href="/t30/assets/minima-social-icons.svg#rss"></use>
+              <use xlink:href="/assets/minima-social-icons.svg#rss"></use>
             </svg><span>Subscribe</span>
           </a>
         </p>
