deploy: e7c78ff3ad0fc95e55e89e3b3e435f181eb36bcc

--- a/search/index.html
+++ b/search/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://t30unifor.tk/search/" />
 <meta property="og:site_name" content="Turma 30 Unifor" />
 <script type="application/ld+json">
-{"description":"O site ainda não oficial da T30 de Medicina da Unifor.","url":"https://t30unifor.tk/search/","@type":"WebPage","headline":"Search","@context":"https://schema.org"}</script>
+{"url":"https://t30unifor.tk/search/","@type":"WebPage","headline":"Search","description":"O site ainda não oficial da T30 de Medicina da Unifor.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://t30unifor.tk/feed.xml" title="Turma 30 Unifor" /><link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
