--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ search_exclude: true
 image: images/logo.png
 ---
 
-Bem vind@ ao portal ainda não oficial da T30 Unifor. No futuro, pretendemos usar esse site para disponibilizar resumos. anotações e materias que foram compartilhados pela turma. No momento, temos alguns tutoriais sobre como usar o site.
+Bem vind@ ao portal ainda não oficial da T30 Unifor. No futuro, pretendemos usar esse site para disponibilizar resumos, anotações e materias que foram compartilhados pela turma. No momento, temos alguns limls importantes para a Unifor, com tutoriais a seguir.
 
 1. [Unifor Online](http://uol.unifor.br)
 1. [Portal EAD](http://ead.unifor.br)
