--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>Bem vind@ ao portal ainda não oficial da T30 Unifor. No futuro, pretendemos usar esse site para disponibilizar resumos, anotações e materias que foram compartilhados pela turma. No momento, temos alguns limls importantes para a Unifor, com tutoriais a seguir.</p>
+        <div class="home"><p>Bem vind@ ao portal ainda não oficial da T30 Unifor. No futuro, pretendemos usar esse site para disponibilizar resumos, anotações e materias que foram compartilhados pela turma. No momento, temos alguns links importantes para a Unifor, com tutoriais a seguir.</p>
 
 <ol>
   <li><a href="http://uol.unifor.br">Unifor Online</a></li>
