deploy: 41ad6966e928867829d2d9c1ecafec50b57f45ea

--- a/tutoriais/index.html
+++ b/tutoriais/index.html
@@ -76,16 +76,34 @@ window.onload = wrap_img;
     <h2 id="tutoriais-essenciais">Tutoriais Essenciais</h2>
 
 <ol>
-  <li>Eu ainda não tenho acesso ao Unifor Online. E agora?
-No ato de matrícula, você deve ter recebido um email com uma senha temporária, que pode ser atualizada no site. Caso não encontre esse email, tente enviar um email para <a href="mailto:infra@unifor.br">infra@unifor.br</a> com seu nome completo, matrícula e pedido para resetar a senha do email cadastrado na matrícula.</li>
-  <li>Como eu encontro a minha turma? O meu GT?
- <a href="https://raw.githubusercontent.com/t30unifor/t30/master/turmas.pdf">Clique aqui</a> para encontrar essas informações</li>
-  <li>O que é turma?
-A turma em si de Medicina tem 100 alunos. Algumas aulas a Unifor organiza em 4 turmas de 25.</li>
-  <li>O que são Grupos Tutoriais?
- Grupos específicos de trabalho no sistema PBL (clique aqui para saber mais), com 10 pessoas por grupo.</li>
-  <li>Qual o início do ano letivo?
- Dia 01 de fevereiro de 2021.</li>
+  <li>
+    <p>Eu ainda não tenho acesso ao Unifor Online. E agora?</p>
+
+    <p>No ato de matrícula, você deve ter recebido um email com uma senha temporária, que pode ser atualizada no site. Caso não encontre esse email, tente enviar um email para <a href="mailto:infra@unifor.br">infra@unifor.br</a> com seu nome completo, matrícula e pedido para resetar a senha do email cadastrado na matrícula.</p>
+  </li>
+  <li>
+    <p>Como eu encontro a minha turma? O meu GT?</p>
+
+    <p><a href="https://raw.githubusercontent.com/t30unifor/t30/master/turmas.pdf">Clique aqui</a> para encontrar essas informações</p>
+  </li>
+  <li>
+    <p>O que é turma?</p>
+
+    <p>A turma em si de Medicina tem 100 alunos. Algumas aulas a Unifor organiza em 4 turmas de 25.</p>
+  </li>
+  <li>
+    <p>O que são Grupos Tutoriais?</p>
+
+    <p>Grupos específicos de trabalho no sistema PBL (clique aqui para saber mais), com 10 pessoas por grupo.</p>
+  </li>
+  <li>
+    <p>Qual o início do ano letivo?</p>
+
+    <p>Dia 01 de fevereiro de 2021.
+<!--stackedit_data:
+eyJoaXN0b3J5IjpbLTIwNDg0NjYxMjZdfQ==
+--></p>
+  </li>
 </ol>
 
   </div>
