--- a/tutoriais/index.html
+++ b/tutoriais/index.html
@@ -84,7 +84,7 @@ window.onload = wrap_img;
   <li>
     <p>Como eu encontro a minha turma? O meu GT?</p>
 
-    <p><a href="https://raw.githubusercontent.com/t30unifor/t30/master/turmas.pdf">Clique aqui</a> para encontrar essas informações</p>
+    <p><a href="https://raw.githubusercontent.com/t30unifor/t30/master/turmas.pdf">Clique aqui</a> para encontrar essas informações.</p>
   </li>
   <li>
     <p>O que é turma?</p>
@@ -101,7 +101,8 @@ window.onload = wrap_img;
 
     <p>Dia 01 de fevereiro de 2021.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNDg0NjYxMjZdfQ==
+eyJoaXN0b3J5IjpbLTE0MTE0NTY5MTYsLTIwNDg0NjYxMjZdfQ
+==
 --></p>
   </li>
 </ol>
