--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ window.onload = wrap_img;
   <li><a href="mailto:infra@unifor.br">Email para problemas com o acesso</a></li>
 </ol>
 
-<h2 id="se-alguém-tem-interesse-em-aprender-ou-já-sabe-escrever-com-markdown-por-favor-me-envia-uma-mensagem">Se alguém tem interesse em aprender (ou já sabe) escrever com Markdown, por favor <a href="https://cutt.ly/XjchQ95">me envia uma mensagem</a>!</h2>
+<h2 id="se-alguém-tem-interesse-em-aprender-ou-já-sabe-escrever-com-markdown-por-favor-me-envia-uma-mensagem">Se alguém tem interesse em aprender (ou já sabe) escrever com Markdown, por favor <a href="https://cutt.ly/HjcjhHS">me envia uma mensagem</a>!</h2>
 <p><img src="https://media4.giphy.com/media/daxA5okS3H9gkpKpjR/giphy.gif" alt="" /></p>
 
 <h1 id="posts">Posts</h1>
