--- a/tutoriais/index.html
+++ b/tutoriais/index.html
@@ -115,14 +115,14 @@ Vamos lá:</p>
 </ol>
 <div class="Toast Toast--warning googoo">
    <span class="Toast-icon"><svg class="octicon octicon-alert octicon octicon-alert" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M8.22 1.754a.25.25 0 00-.44 0L1.698 13.132a.25.25 0 00.22.368h12.164a.25.25 0 00.22-.368L8.22 1.754zm-1.763-.707c.659-1.234 2.427-1.234 3.086 0l6.082 11.378A1.75 1.75 0 0114.082 15H1.918a1.75 1.75 0 01-1.543-2.575L6.457 1.047zM9 11a1 1 0 11-2 0 1 1 0 012 0zm-.25-5.25a.75.75 0 00-1.5 0v2.5a.75.75 0 001.5 0v-2.5z"></path></svg></span>
-   <span class="Toast-content">You can include alert boxes</span>
+   <span class="Toast-content">Agora, o seu email para o Unifor Online será o que você criou para sua conta. Para evitar confusões, adicione esse email no seu app de email ou abra-o com freqûencia</span>
 </div>
 
 <ol>
   <li>E pronto! A partir de agora você pode usar a biblioteca online e outros serviços
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMyMDIxOTI2NSw4NzAwMTU3NTYsLTQyNT
-E1Nzc4MCwtMjA0ODQ2NjEyNl19
+eyJoaXN0b3J5IjpbLTEyNDk3MTQ1NDksODcwMDE1NzU2LC00Mj
+UxNTc3ODAsLTIwNDg0NjYxMjZdfQ==
 --></li>
 </ol>
 
