--- a/tutoriais/index.html
+++ b/tutoriais/index.html
@@ -108,28 +108,28 @@ window.onload = wrap_img;
 <p>Ei galera, boa tarde! Nesse post vou ensinar vcs como criar um email da Unifor. Assim você pode ter acesso à revistas médicas, sites de pesquisa e descontos para universitários (tipo o Spotify), além de armazenamento ilimitado no goole drive, one drive e o office online.
 Vamos lá:</p>
 <ol>
-  <li>Acesso ao Unifor Online. Se você ainda não tem uma senha procure o email que te mandaram ou mande um para <a href="mailto:infra@unifor.br">infra@unifor.br</a></li>
-  <li>Pelo computador ou navegar do celular vá para pessoal -&gt; email -&gt; criar conta</li>
+  <li>Acesso ao Unifor Online. Se você ainda não tem uma senha procure o email que te mandaram ou mande um para <a href="mailto:infra@unifor.br">infra@unifor.br</a>.</li>
+  <li>Pelo computador ou navegar do celular vá para pessoal -&gt; email -&gt; criar conta.</li>
   <li>Digite o nome de email que você quiser. A sua conta nome@edu.unifor.br vai estar disponível pelo <a href="gmail.com">Gmail</a> e funciona como qualquer outra conta google. A senha é a mesma da unifor online.</li>
   <li>A partir desse momento, seu email do Unifor Online vai ser o seu email unifor, então eu recomendo você adicionar essa conta de email onde você normalmente checa seu email, seja pelo celular, seja pelo conputador.</li>
 </ol>
 <div class="Toast Toast--warning googoo">
    <span class="Toast-icon"><svg class="octicon octicon-alert octicon octicon-alert" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M8.22 1.754a.25.25 0 00-.44 0L1.698 13.132a.25.25 0 00.22.368h12.164a.25.25 0 00.22-.368L8.22 1.754zm-1.763-.707c.659-1.234 2.427-1.234 3.086 0l6.082 11.378A1.75 1.75 0 0114.082 15H1.918a1.75 1.75 0 01-1.543-2.575L6.457 1.047zM9 11a1 1 0 11-2 0 1 1 0 012 0zm-.25-5.25a.75.75 0 00-1.5 0v2.5a.75.75 0 001.5 0v-2.5z"></path></svg></span>
-   <span class="Toast-content">Agora, o seu email para o Unifor Online será o que você criou para sua conta. Para evitar confusões, adicione esse email no seu app de email ou abra-o com frequência</span>
+   <span class="Toast-content">Agora, o seu email para o Unifor Online será o que você criou para sua conta. Para evitar confusões, adicione esse email no seu app de email ou abra-o com frequência.</span>
 </div>
 
 <ol>
-  <li>E pronto! A partir de agora você pode usar a biblioteca online e outros serviços</li>
+  <li>E pronto! A partir de agora você pode usar a biblioteca online e outros serviços.</li>
 </ol>
 
 <div class="Toast">
    <span class="Toast-icon"><svg class="octicon octicon-info octicon octicon-info" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M8 1.5a6.5 6.5 0 100 13 6.5 6.5 0 000-13zM0 8a8 8 0 1116 0A8 8 0 010 8zm6.5-.25A.75.75 0 017.25 7h1a.75.75 0 01.75.75v2.75h.25a.75.75 0 010 1.5h-2a.75.75 0 010-1.5h.25v-2h-.25a.75.75 0 01-.75-.75zM8 6a1 1 0 100-2 1 1 0 000 2z"></path></svg></span>
-   <span class="Toast-content">O email da Unifor funciona como um email gmail qualqu</span>
+   <span class="Toast-content">O email da Unifor funciona como um email gmail qualquer.</span>
 </div>
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwMDUzOTU1OTgsODcwMDE1NzU2LC00Mj
-UxNTc3ODAsLTIwNDg0NjYxMjZdfQ==
+eyJoaXN0b3J5IjpbMTM0NzExMjEyNyw4NzAwMTU3NTYsLTQyNT
+E1Nzc4MCwtMjA0ODQ2NjEyNl19
 -->
 
   </div>
