deploy: fd8c533a4b5c4d1f9e1f0365417e33e20330ded7

--- a/tutoriais/index.html
+++ b/tutoriais/index.html
@@ -128,8 +128,9 @@ Vamos lá:</p>
 </div>
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTExNzUzNTUzMywxMzQ3MTEyMTI3LDg3MD
-AxNTc1NiwtNDI1MTU3NzgwLC0yMDQ4NDY2MTI2XX0=
+eyJoaXN0b3J5IjpbLTk3MDE4MzEzMSwxMTE3NTM1NTMzLDEzND
+cxMTIxMjcsODcwMDE1NzU2LC00MjUxNTc3ODAsLTIwNDg0NjYx
+MjZdfQ==
 -->
 
   </div>
