--- a/tutoriais/index.html
+++ b/tutoriais/index.html
@@ -94,7 +94,7 @@ window.onload = wrap_img;
   <li>
     <p>O que são Grupos Tutoriais?</p>
 
-    <p>Grupos específicos de trabalho no sistema PBL (clique aqui para saber mais), com 10 pessoas por grupo.</p>
+    <p>Grupos específicos de trabalho no sistema PBL (<a href="https://www.soulmedicina.com.br/noticia/25/conheca-o-metodo-pbl-na-medicina-/">clique aqui</a> para saber mais), com 10 pessoas por grupo.</p>
   </li>
   <li>
     <p>Qual o início do ano letivo?</p>
@@ -118,9 +118,7 @@ Vamos lá:</p>
    <span class="Toast-content">Agora, o seu email para o Unifor Online será o que você criou para sua conta. Para evitar confusões, adicione esse email no seu app de email ou abra-o com frequência.</span>
 </div>
 
-<ol>
-  <li>E pronto! A partir de agora você pode usar a biblioteca online e outros serviços.</li>
-</ol>
+<p>E pronto! A partir de agora você pode usar a biblioteca online e outros serviços.</p>
 
 <div class="Toast">
    <span class="Toast-icon"><svg class="octicon octicon-info octicon octicon-info" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M8 1.5a6.5 6.5 0 100 13 6.5 6.5 0 000-13zM0 8a8 8 0 1116 0A8 8 0 010 8zm6.5-.25A.75.75 0 017.25 7h1a.75.75 0 01.75.75v2.75h.25a.75.75 0 010 1.5h-2a.75.75 0 010-1.5h.25v-2h-.25a.75.75 0 01-.75-.75zM8 6a1 1 0 100-2 1 1 0 000 2z"></path></svg></span>
@@ -128,9 +126,9 @@ Vamos lá:</p>
 </div>
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk3MDE4MzEzMSwxMTE3NTM1NTMzLDEzND
-cxMTIxMjcsODcwMDE1NzU2LC00MjUxNTc3ODAsLTIwNDg0NjYx
-MjZdfQ==
+eyJoaXN0b3J5IjpbLTEwOTEyMDU3ODgsMTExNzUzNTUzMywxMz
+Q3MTEyMTI3LDg3MDAxNTc1NiwtNDI1MTU3NzgwLC0yMDQ4NDY2
+MTI2XX0=
 -->
 
   </div>
