deploy: bcf2ac522222a9b3c698ed17846846575d55202c

--- a/tutoriais/index.html
+++ b/tutoriais/index.html
@@ -77,6 +77,7 @@ window.onload = wrap_img;
 <ul>
   <li><a href="#perguntas-frequentes">Perguntas Frequentes</a></li>
   <li><a href="#email-da-unifor">Email da Unifor</a></li>
+  <li><a href="#nomenclatura">Nomenclatura</a></li>
 </ul>
 
 <h2 id="perguntas-frequentes">Perguntas Frequentes</h2>
@@ -131,11 +132,31 @@ Vamos lá:</p>
    <span class="Toast-content">O email da Unifor funciona como um email gmail qualquer.</span>
 </div>
 
+<h2 id="nomenclatura">Nomenclatura</h2>
+
+<p>AIS = Ações Integradas de Saúde 
+HAB/ LH= Habilidades Medicas/ Laboratorio de Habilidades
+LMF = Laboratorio Morfofuncional 
+GT = Grupo Tutorial
+LCB = Laboratorio de Ciências Basicas
+LABinfo = Laboratorio de Informática</p>
+
+<p>AIS consiste, em sua maior parte, em aulas com discussão de textos que o professor fornece em sala. Também temos trabalhos que exigem visitas a postos de saúde, entrevistas de pessoas em alguns bairros mais carentes e observação de consultas! É o módulo que trata de Medicina da Família e da Comunidade.</p>
+
+<p>HAB é o módulo em que aprendemos a fazer coisas práticas da Medicina, como aferir pressão, realizar punção venosa, fazer consultas, entre outros. São aulas bem interativas, e as professoras fazem varias atividades além das que são cobradas em avaliações, como dinâmicas de psicologia, por exemplo No SS do NAMI. »Precisa de Jaleco«</p>
+
+<p>LMF é dividido em duas partes na semana: em um só horário, é dada aula teórica de Histologia e Anatomia. Quando há dois horários, é dada aula prática de Histologia e Anatomia, com uso de microscópios e peças anatômicas, e de Radiologia. No terceiro andar do NAMI »Precisa de jaleco«</p>
+
+<p>GT acontece nas segundas e quintas, nos dois horários da manhã. Uma pessoa do grupo se voluntaria pra anotar tudo que é discutido, outra se voluntaria pra coordenar a discussão. Consiste em analisar casos (pequenas histórias), criar uma pergunta acerca desses casos pra nortear as discussões, discutir com o grupo sobre tudo o que se sabe a respeito do tema discutido, pelo que se aprendeu no ensino médio, pelo que se viu na TV, pelo que o senso comum ensinou, etc. Sistematizar tudo que foi discutido e, no fim, criar objetivos de estudo para levar pra casa, como “Explicar qual o papel da bile na digestão” ou “Analisar como ocorre o impulso nervoso”. No outro encontro, o grupo irá discutir o que aprendeu com esses objetivos. Todas as discussões são guiadas por um tutor, que é um professor, que vai avaliar se você aprendeu todos os objetivos, como você se porta no grupo, etc. No terceiro andar do NAMI</p>
+
+<p>LCB consiste em práticas laboratoriais diversas, acontece somente algumas vezes no mês. Geralmente no Bloco F, mas varia, e será informado o local pra vocês » Precisa de Jaleco «</p>
+
+<p>LABInfo consiste em aulas no laboratório de informática ensinando a mexer com a Biblioteca digital, a buscar artigos, a lidar com tecnologias voltadas ao curso, também acontece esporadicamente. No terceiro andar do NAMI
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ3MTQyNjgxLC0xMDkxMjA1Nzg4LDExMT
-c1MzU1MzMsMTM0NzExMjEyNyw4NzAwMTU3NTYsLTQyNTE1Nzc4
-MCwtMjA0ODQ2NjEyNl19
--->
+eyJoaXN0b3J5IjpbMTA4MDkyMTI3NSwtMTA5MTIwNTc4OCwxMT
+E3NTM1NTMzLDEzNDcxMTIxMjcsODcwMDE1NzU2LC00MjUxNTc3
+ODAsLTIwNDg0NjYxMjZdfQ==
+--></p>
 
   </div>
 
