deploy: 48a1a2d745594ef21bc5e1b43e544d4de3b7baaa

--- a/tutoriais/index.html
+++ b/tutoriais/index.html
@@ -134,12 +134,14 @@ Vamos lá:</p>
 
 <h2 id="nomenclatura">Nomenclatura</h2>
 
-<p>AIS = Ações Integradas de Saúde 
-HAB/ LH= Habilidades Medicas/ Laboratorio de Habilidades
-LMF = Laboratorio Morfofuncional 
-GT = Grupo Tutorial
-LCB = Laboratorio de Ciências Basicas
-LABinfo = Laboratorio de Informática</p>
+<ul>
+  <li>AIS = Ações Integradas de Saúde</li>
+  <li>HAB/ LH= Habilidades Medicas/ Laboratorio de Habilidades</li>
+  <li>LMF = Laboratorio Morfofuncional</li>
+  <li><strong>GT</strong> = Grupo Tutorial</li>
+  <li><strong>LCB</strong> = Laboratorio de Ciências Basicas</li>
+  <li>LABinfo = Laboratorio de Informática</li>
+</ul>
 
 <p>AIS consiste, em sua maior parte, em aulas com discussão de textos que o professor fornece em sala. Também temos trabalhos que exigem visitas a postos de saúde, entrevistas de pessoas em alguns bairros mais carentes e observação de consultas! É o módulo que trata de Medicina da Família e da Comunidade.</p>
 
@@ -153,7 +155,7 @@ LABinfo = Laboratorio de Informática</p>
 
 <p>LABInfo consiste em aulas no laboratório de informática ensinando a mexer com a Biblioteca digital, a buscar artigos, a lidar com tecnologias voltadas ao curso, também acontece esporadicamente. No terceiro andar do NAMI
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA4MDkyMTI3NSwtMTA5MTIwNTc4OCwxMT
+eyJoaXN0b3J5IjpbMTY2OTgwMjE0NSwtMTA5MTIwNTc4OCwxMT
 E3NTM1NTMzLDEzNDcxMTIxMjcsODcwMDE1NzU2LC00MjUxNTc3
 ODAsLTIwNDg0NjYxMjZdfQ==
 --></p>
