deploy: 31da1a9508c3f2fed13b4f70c392ab9d782e21e4

--- a/tutoriais/index.html
+++ b/tutoriais/index.html
@@ -176,9 +176,9 @@ Vamos lá:</p>
 </div>
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTcwMzU5NjUxOSwtMTA5MTIwNTc4OCwxMT
-E3NTM1NTMzLDEzNDcxMTIxMjcsODcwMDE1NzU2LC00MjUxNTc3
-ODAsLTIwNDg0NjYxMjZdfQ==
+eyJoaXN0b3J5IjpbMjU2MzU4ODIzLC0xMDkxMjA1Nzg4LDExMT
+c1MzU1MzMsMTM0NzExMjEyNyw4NzAwMTU3NTYsLTQyNTE1Nzc4
+MCwtMjA0ODQ2NjEyNl19
 -->
 
   </div>
