--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@ search_exclude: true
 image: images/logo.png
 ---
 
-Bem vind@ ao portal ainda não oficial da T30 Unifor. No futuro, pretendemos usar esse site para disponibilizar resumos, anotações e materias que foram compartilhados pela turma. No momento, temos alguns links importantes para a Unifor, com tutoriais a seguir.
+Bem vind@ ao portal ainda não oficial da T30 Unifor. No futuro, pretendemos usar esse site para disponibilizar resumos, anotações e materias que foram compartilhados pela turma. 
 
+## Links Importantes
 1. [Unifor Online](http://uol.unifor.br)
 1. [Portal EAD](http://ead.unifor.br)
 1. [Email para problemas com o acesso](mailto:infra@unifor.br)
 
-## Se alguém tem interesse em aprender (ou já sabe) escrever com Markdown, por favor [me envia uma mensagem](https://cutt.ly/HjcjhHS)!
-![](https://media4.giphy.com/media/daxA5okS3H9gkpKpjR/giphy.gif)
+
+
+## Quer ajudar no site?
+
+[Me envia uma mensagem!](https://cutt.ly/HjcjhHS)! 
+{% include info.html text="Não precisa saber programação!" %}
+![](https://i.giphy.com/3oEdva9BUHPIs2SkGk.gif)
 
 # Posts
