--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@ Bem vind@ ao portal ainda não oficial da T30 Unifor. No futuro, pretendemos usa
 1. [Portal EAD](http://ead.unifor.br)
 1. [Email para problemas com o acesso](mailto:infra@unifor.br)
 
+## Perguntas Frequentes / Dicas
 
+[Clique aqui!](/tutoriais)
 
 ## Quer ajudar no site?
 
