deploy: 0592d78ae1e7bccfddde0417fd2939dee0f0e4b4

--- a/index.html
+++ b/index.html
@@ -73,16 +73,24 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>Bem vind@ ao portal ainda não oficial da T30 Unifor. No futuro, pretendemos usar esse site para disponibilizar resumos, anotações e materias que foram compartilhados pela turma. No momento, temos alguns links importantes para a Unifor, com tutoriais a seguir.</p>
+        <div class="home"><p>Bem vind@ ao portal ainda não oficial da T30 Unifor. No futuro, pretendemos usar esse site para disponibilizar resumos, anotações e materias que foram compartilhados pela turma.</p>
 
+<h2 id="links-importantes">Links Importantes</h2>
 <ol>
   <li><a href="http://uol.unifor.br">Unifor Online</a></li>
   <li><a href="http://ead.unifor.br">Portal EAD</a></li>
   <li><a href="mailto:infra@unifor.br">Email para problemas com o acesso</a></li>
 </ol>
 
-<h2 id="se-alguém-tem-interesse-em-aprender-ou-já-sabe-escrever-com-markdown-por-favor-me-envia-uma-mensagem">Se alguém tem interesse em aprender (ou já sabe) escrever com Markdown, por favor <a href="https://cutt.ly/HjcjhHS">me envia uma mensagem</a>!</h2>
-<p><img src="https://media4.giphy.com/media/daxA5okS3H9gkpKpjR/giphy.gif" alt="" /></p>
+<h2 id="quer-ajudar-no-site">Quer ajudar no site?</h2>
+
+<p><a href="https://cutt.ly/HjcjhHS">Me envia uma mensagem!</a>!</p>
+<div class="Toast">
+   <span class="Toast-icon"><svg class="octicon octicon-info octicon octicon-info" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M8 1.5a6.5 6.5 0 100 13 6.5 6.5 0 000-13zM0 8a8 8 0 1116 0A8 8 0 010 8zm6.5-.25A.75.75 0 017.25 7h1a.75.75 0 01.75.75v2.75h.25a.75.75 0 010 1.5h-2a.75.75 0 010-1.5h.25v-2h-.25a.75.75 0 01-.75-.75zM8 6a1 1 0 100-2 1 1 0 000 2z"></path></svg></span>
+   <span class="Toast-content">Não precisa saber programação!</span>
+</div>
+
+<p><img src="https://i.giphy.com/3oEdva9BUHPIs2SkGk.gif" alt="" /></p>
 
 <h1 id="posts">Posts</h1>
 
