deploy: 4e10c70ac323c6529cf489a87e4bf9ef8690ecff

--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@ window.onload = wrap_img;
   <li><a href="mailto:infra@unifor.br">Email para problemas com o acesso</a></li>
 </ol>
 
+<h2 id="perguntas-frequentes--dicas">Perguntas Frequentes / Dicas</h2>
+
+<p><a href="/tutoriais">Clique aqui!</a></p>
+
 <h2 id="quer-ajudar-no-site">Quer ajudar no site?</h2>
 
 <p><a href="https://cutt.ly/HjcjhHS">Me envia uma mensagem!</a>!</p>
