--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@ Bem vind@ ao portal ainda não oficial da T30 Unifor. No futuro, pretendemos usa
 
 ## Quer ajudar no site?
 
-[Me envia uma mensagem!](https://cutt.ly/HjcjhHS)! 
-{% include info.html text="Não precisa saber programação!" %}
-![](https://i.giphy.com/3oEdva9BUHPIs2SkGk.gif)
+[Me envia uma mensagem!](https://cutt.ly/HjcjhHS)  
+PS: *Não* precisa saber programação!
 
 # Posts
