--- a/index.html
+++ b/index.html
@@ -88,13 +88,8 @@ window.onload = wrap_img;
 
 <h2 id="quer-ajudar-no-site">Quer ajudar no site?</h2>
 
-<p><a href="https://cutt.ly/HjcjhHS">Me envia uma mensagem!</a>!</p>
-<div class="Toast">
-   <span class="Toast-icon"><svg class="octicon octicon-info octicon octicon-info" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M8 1.5a6.5 6.5 0 100 13 6.5 6.5 0 000-13zM0 8a8 8 0 1116 0A8 8 0 010 8zm6.5-.25A.75.75 0 017.25 7h1a.75.75 0 01.75.75v2.75h.25a.75.75 0 010 1.5h-2a.75.75 0 010-1.5h.25v-2h-.25a.75.75 0 01-.75-.75zM8 6a1 1 0 100-2 1 1 0 000 2z"></path></svg></span>
-   <span class="Toast-content">Não precisa saber programação!</span>
-</div>
-
-<p><img src="https://i.giphy.com/3oEdva9BUHPIs2SkGk.gif" alt="" /></p>
+<p><a href="https://cutt.ly/HjcjhHS">Me envia uma mensagem!</a><br />
+PS: <em>Não</em> precisa saber programação!</p>
 
 <h1 id="posts">Posts</h1>
 
