deploy: 29302e81ebab901330f7daaffed0267cd40d20f2

--- a/404.html
+++ b/404.html
@@ -88,8 +88,8 @@ window.onload = wrap_img;
 
 <div class="container">
   <h1>404</h1>
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Ops! Página não encontrada :(</strong></p>
+  <p>Essa página não foi encontrada. Me envie um email se isso for um erro.</p>
 </div>
 
       </div>
