--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@ layout: home
 search_exclude: true
 image: images/logo.png
 ---
-
+ <font size="3">
 Bem vind@ ao portal ainda não oficial da T30 Unifor. No futuro, pretendemos usar esse site para disponibilizar resumos, anotações e materias que foram compartilhados pela turma. 
-
+</font>
 ## Links Importantes
+ <font size="3">
 1. [Unifor Online](http://uol.unifor.br)
 1. [Portal EAD](http://ead.unifor.br)
 1. [Email para problemas com o acesso](mailto:infra@unifor.br)
-
+</font>
 ## Perguntas Frequentes / Dicas
-
+ <font size="3">
 [Clique aqui!](/tutoriais)
-
+</font>
 ## Quer ajudar no site?
-
+ <font size="3">
 [Me envia uma mensagem!](https://cutt.ly/HjcjhHS)  
 PS: *Não* precisa saber programação!
-
+</font>
 # Posts
