deploy: 6bcddd864dba69a49360611c8755151db1754d98

--- a/index.html
+++ b/index.html
@@ -73,24 +73,24 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>Bem vind@ ao portal ainda não oficial da T30 Unifor. No futuro, pretendemos usar esse site para disponibilizar resumos, anotações e materias que foram compartilhados pela turma.</p>
-
+        <div class="home"><font size="3">
+Bem vind@ ao portal ainda não oficial da T30 Unifor. No futuro, pretendemos usar esse site para disponibilizar resumos, anotações e materias que foram compartilhados pela turma. 
+</font>
 <h2 id="links-importantes">Links Importantes</h2>
-<ol>
-  <li><a href="http://uol.unifor.br">Unifor Online</a></li>
-  <li><a href="http://ead.unifor.br">Portal EAD</a></li>
-  <li><a href="mailto:infra@unifor.br">Email para problemas com o acesso</a></li>
-</ol>
-
+<font size="3">
+1. [Unifor Online](http://uol.unifor.br)
+1. [Portal EAD](http://ead.unifor.br)
+1. [Email para problemas com o acesso](mailto:infra@unifor.br)
+</font>
 <h2 id="perguntas-frequentes--dicas">Perguntas Frequentes / Dicas</h2>
-
-<p><a href="/tutoriais">Clique aqui!</a></p>
-
+<font size="3">
+[Clique aqui!](/tutoriais)
+</font>
 <h2 id="quer-ajudar-no-site">Quer ajudar no site?</h2>
-
-<p><a href="https://cutt.ly/HjcjhHS">Me envia uma mensagem!</a><br />
-PS: <em>Não</em> precisa saber programação!</p>
-
+<font size="3">
+[Me envia uma mensagem!](https://cutt.ly/HjcjhHS)  
+PS: *Não* precisa saber programação!
+</font>
 <h1 id="posts">Posts</h1>
 
 
